# afterpython

./: .env.example  .gitignore  CNAME  CONTRIBUTING.md  README.md  hatch.toml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
afterpython/: .pre-commit-config.yaml  __init__.py  _paths.py  _typing.py  afterpython.toml  article.css  authors.yml  build.py  const.py  cz.toml  faq.yml  main.py  pcu.py  ruff-template.toml  ruff.toml  utils.py  version.py
afterpython/_io/: _git.py  toml.py  yaml.py
afterpython/_website/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js
afterpython/_website/src/: app.css
afterpython/_website/src/lib/components/: DropdownMenu.svelte  DropdownMenuItem.svelte  Footer.svelte  Logo.svelte
afterpython/_website/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
afterpython/_website/static/: metadata.json  project_website.excalidraw
afterpython/blog/: myst.yml  test.md
afterpython/builders/: __init__.py  blog.py  docs.py  examples.py  metadata.py  molab.py  tutorials.py
afterpython/cli/: __init__.py  main.py
afterpython/cli/commands/: build.py  bump.py  check.py  clean.py  commit.py  commitizen.py  dev.py  format.py  init.py  install.py  lock.py  pre_commit.py  preview.py  start.py  sync.py  test.py  update.py  update_template.py  update_website.py
afterpython/const/: paths.py
afterpython/doc/: CONTRIBUTING.md  concepts.md  myst.md  myst.yml  overview.md  project_website.md  quickstart.md  test2.md  walkthrough.md
afterpython/doc/package_maintenance/: ci_cd.md  commit_workflow.md  package_management.md  package_releases.md  release_management.md
afterpython/doc/references/: cli_commands.md  environment_variables.md  roadmap.md
afterpython/doc/static/: project_website.excalidraw
afterpython/doc/walkthrough/: afterpython_toml.md  authors_yml.md  directories.md  myst_yml.md
afterpython/docs/: myst.yml
afterpython/example/: myst.yml  test.ipynb
afterpython/guide/: myst.yml
afterpython/parsers/: __init__.py  jupyter_notebook.py  marimo_notebook.py  markdown.py  mystmd_contents.py
afterpython/templates/: ci-workflow-template.yml  deploy-workflow-template.yml  ruff-template.toml
afterpython/tools/: _afterpython.py  _git.py  afterpython.py  branch_rules.py  commitizen.py  github_actions.py  myst.py  pre_commit.py  pyproject.py
afterpython/tutorial/: myst.yml  test.ipynb
afterpython/utils/: pypi.py  toml.py  utils.py  yaml.py
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/blog/: +page.svelte
frontend/src/routes/blog/[slug]/: +page.server.ts  +page.svelte  +page.ts
src/afterpython/: utils.py
src/afterpython/builders/: __init__.py  metadata.py
src/afterpython/cli/commands/: build.py  bump.py  clean.py  commit.py  commitizen.py  dev.py  format.py  init.py  install.py  preview.py  start.py  sync.py  update.py
src/afterpython/templates/: ci-workflow-template.yml  cz-template.toml
src/afterpython/tools/: _afterpython.py  commitizen.py  pre_commit.py
