[project]
name = "afterpython"
version = "0.0.1.dev2"
description = ""
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+afterpython@gmail.com"}
]
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "trogon>=0.6.0",
    "mystmd[execute]>=1.6.4",
    "marimo[recommended]>=0.17.6",
]

[project.urls]
homepage = "https://afterpython.org"
repository = "https://github.com/AfterPythonOrg/afterpython"
documentation = "https://docs.afterpython.org"

[project.scripts]
afterpython = "afterpython.main:run_cli"
afpy = "afterpython.main:run_cli"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pre-commit>=4.3.0",
    "commitizen>=4.9.1",
    "python-semantic-release>=10.4.1",
    "pdoc>=16.0.0",
]

[tool.uv]
# override the restrictive version constraints "platformdirs~=4.2.2", "nodeenv~=1.9.1" in package `mystmd`
override-dependencies = ["platformdirs>=4.5.0", "nodeenv>=1.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [build-system]
# requires = ["uv_build>=0.9.7,<0.10.0"]
# build-backend = "uv_build"

# [tool.uv.build-backend]
# module-name = "afterpython"
# module-root = ""
