[project]
name = "afterpython"
version = "0.0.1.dev2"
description = "CLI tool for AfterPython"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+afterpython@gmail.com"}
]
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "trogon>=0.6.0",
    "pyproject-metadata>=0.9.1",
    "mystmd>=1.6.4",
    "pdoc>=16.0.0",
    "ruff>=0.14.4",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
marimo = ["marimo[recommended]>=0.17.7"]
jupyter = ["notebook>=7.4.7", "jupytext>=1.18.1"]

[project.urls]
homepage = "https://afterpython.org"
repository = "https://github.com/AfterPythonOrg/afterpython"
documentation = "https://docs.afterpython.org"

[project.scripts]
ap = "afterpython.main:run_cli"

[tool.uv]
# override the restrictive version constraints "platformdirs~=4.2.2", "nodeenv~=1.9.1" in package `mystmd`
override-dependencies = ["platformdirs>=4.5.0", "nodeenv>=1.9.1"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "afterpython"
module-root = ""
source-exclude = [
    "afterpython/blog",
    "afterpython/docs",
    "afterpython/tutorials",
    "afterpython/examples",
    "afterpython/static",
    "afterpython/_website",
    "afterpython/_build",
    "afterpython/ruff.toml",
    "afterpython/afterpython.toml",
]
wheel-exclude = [
    "afterpython/blog",
    "afterpython/docs",
    "afterpython/tutorials",
    "afterpython/examples",
    "afterpython/static",
    "afterpython/_website",
    "afterpython/_build",
    "afterpython/ruff.toml",
    "afterpython/afterpython.toml",
]
