[project]
name = "afterpython"
version = "0.0.1.dev2"
description = "CLI tool for AfterPython"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+afterpython@gmail.com"}
]
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "trogon>=0.6.0",
    "httpx>=0.28.1",
    "tomlkit>=0.13.3",
    "ruamel-yaml>=0.18.16",
    "gitpython>=3.1.45",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "pyproject-metadata>=0.9.1",
    "jupytext>=1.18.1",
    "jinja2>=3.1.6",
    "mystmd>=1.6.4",
    "pdoc>=16.0.0",
    "ruff>=0.14.4",
    "pre-commit>=4.4.0",
    # "commitizen>=4.9.1",
    # "python-semantic-release>=10.5.2",
]

[project.urls]
homepage = "https://afterpython.org"
repository = "https://github.com/AfterPythonOrg/afterpython"
documentation = "https://docs.afterpython.org"

[project.scripts]
ap = "afterpython.main:run_cli"
pcu = "afterpython.main:run_pcu"

[tool.uv]
# override the restrictive version constraints "platformdirs~=4.2.2", "nodeenv~=1.9.1" in package `mystmd`
override-dependencies = ["platformdirs>=4.5.0", "nodeenv>=1.9.1"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "notebook>=7.4.7",
]

[tool.uv.build-backend]
module-name = "afterpython"
module-root = ""
source-exclude = [
    "afterpython/doc",
    "afterpython/blog",
    "afterpython/tutorial",
    "afterpython/example",
    "afterpython/guide",
    "afterpython/static",
    "afterpython/_website",
    "afterpython/_build",
    "afterpython/ruff.toml",
    "afterpython/afterpython.toml",
    "afterpython/authors.yml",
    "afterpython/faq.yml",
]
wheel-exclude = [
    "afterpython/doc",
    "afterpython/blog",
    "afterpython/tutorial",
    "afterpython/example",
    "afterpython/guide",
    "afterpython/static",
    "afterpython/_website",
    "afterpython/_build",
    "afterpython/ruff.toml",
    "afterpython/afterpython.toml",
    "afterpython/authors.yml",
    "afterpython/faq.yml",
]
